--- a/notebooks/zonal_compare.ipynb
+++ b/notebooks/zonal_compare.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,17 +113,22 @@
       "2  POLYGON ((-166310.014 1815987.782, -166399.143...  \n",
       "3  MULTIPOLYGON (((-64488.14 1647540.463, -64478....  \n",
       "4  POLYGON ((657219.541 1447846.734, 657127.669 1...  \n",
-      "5  POLYGON ((457285.339 1966984.611, 457540.018 1...  \n"
+      "5  POLYGON ((457285.339 1966984.611, 457540.018 1...  \n",
+      "Interior_Refuges\n"
      ]
     }
    ],
    "source": [
     "\n",
+    "import geopandas as gpd\n",
+    "import os\n",
     "# Using geopandas to open the shapefile\n",
     "interior_refuges_shp_path = '/Users/ojlarson/Desktop/yf/Interior_Refuges.shp'\n",
     "interior_refuges = gpd.read_file(interior_refuges_shp_path)\n",
     "#interior_refuges.set_geometry('geometry', crs=interior_refuges.crs, inplace=True)\n",
-    "print(interior_refuges)"
+    "print(interior_refuges)\n",
+    "shp_name = os.path.splitext(os.path.basename(interior_refuges_shp_path))[0]\n",
+    "shp_column = "
    ]
   },
   {
